k8s/apps/prod/ctf/NuclearCodes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nuclearlaunch
  namespace: ctf
spec:
  selector:
    app: nuclearlaunch
  ports:
    - port: 80
      targetPort: 80
